200 OK http://www.parliament.gh/parliamentarians/314

--- a/www.parliament.gh/77392086cfb6405c1b1bed87c9fd72dd3c9f5af3.yml
+++ b/www.parliament.gh/77392086cfb6405c1b1bed87c9fd72dd3c9f5af3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:47:19 GMT
+    - Thu, 17 Nov 2016 17:12:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2250f7f6b5c93b007d9f3acc9d9941466d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379639%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2b6029908bf6c4dd2a920314888106fa;
-      expires=Thu, 17-Nov-2016 12:47:19 GMT; path=/
-    - csrf_xmen=69c5221abb1a0c4b4d63759fb5c4c35e; expires=Thu, 17-Nov-2016 12:47:19
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223ef4464bcbb94568047867f761452557%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402771%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dab721e0f35b7768c707a78f4980a6212;
+      expires=Thu, 17-Nov-2016 19:12:51 GMT; path=/
+    - csrf_xmen=63c0bab0111f78182f6448d3d607d573; expires=Thu, 17-Nov-2016 19:12:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16480'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:47:19 GMT
+recorded_at: Thu, 17 Nov 2016 17:12:51 GMT
