--- a/www.parliament.gh/9b7a9e4490d19e086fbe83375b8df76b1f986cf3.yml
+++ b/www.parliament.gh/9b7a9e4490d19e086fbe83375b8df76b1f986cf3.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:47:32 GMT
+    - Thu, 17 Nov 2016 17:13:24 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d871596f2bff6433fbbd863475c840a2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379652%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8256241c0151c75a237a04159cf59a60;
-      expires=Thu, 17-Nov-2016 12:47:32 GMT; path=/
-    - csrf_xmen=d104c88bbb557fb135f2c483b0c32595; expires=Thu, 17-Nov-2016 12:47:32
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228c13996baa8c14078a7897d5d4add1ee%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402804%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db388e9bde6bcb261916fc62fdab7314a;
+      expires=Thu, 17-Nov-2016 19:13:24 GMT; path=/
+    - csrf_xmen=7ad5a69677b512d54aca51dda24a8b95; expires=Thu, 17-Nov-2016 19:13:24
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16395'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:47:33 GMT
+recorded_at: Thu, 17 Nov 2016 17:13:25 GMT
