--- a/www.parliament.gh/581105d775b9d57557e70083285d0efcc4f51be9.yml
+++ b/www.parliament.gh/581105d775b9d57557e70083285d0efcc4f51be9.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:47:50 GMT
+    - Thu, 17 Nov 2016 17:13:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221f9110b63162dac6f13c3acf6d8b1590%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379670%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4f54df4f884d460c5cc6027373f22e8c;
-      expires=Thu, 17-Nov-2016 12:47:50 GMT; path=/
-    - csrf_xmen=c8c54cb4f883be4bf78625b1852bd5d0; expires=Thu, 17-Nov-2016 12:47:50
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ccd81ebc7a2f33a68be69344efa390c9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402824%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D63fee2515e5405b0916783fc00176ec5;
+      expires=Thu, 17-Nov-2016 19:13:44 GMT; path=/
+    - csrf_xmen=fdbcdc8f762478d64da57fd4e417f254; expires=Thu, 17-Nov-2016 19:13:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16688'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:47:50 GMT
+recorded_at: Thu, 17 Nov 2016 17:13:44 GMT
