--- a/www.parliament.gh/b441c59bc7e30b14f21e546c2c8378a46d921d06.yml
+++ b/www.parliament.gh/b441c59bc7e30b14f21e546c2c8378a46d921d06.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:48:14 GMT
+    - Thu, 17 Nov 2016 17:14:22 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226c82610eaca464c187172c023a3cfe90%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379694%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9efe49c7ada8408f1198d6e620b58634;
-      expires=Thu, 17-Nov-2016 12:48:14 GMT; path=/
-    - csrf_xmen=35c90b7770b7e30da367d3f4c5ec4740; expires=Thu, 17-Nov-2016 12:48:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2272ac5c8792e2781f53a4f43af77b9627%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402863%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfb58c7887142fe99fa03b83205075ae1;
+      expires=Thu, 17-Nov-2016 19:14:23 GMT; path=/
+    - csrf_xmen=4902ce7c9e7efacc225afef4f0e4f063; expires=Thu, 17-Nov-2016 19:14:23
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16470'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:48:14 GMT
+recorded_at: Thu, 17 Nov 2016 17:14:23 GMT
