200 OK http://www.parliament.gh/parliamentarians/page/120

--- a/www.parliament.gh/9d22511fb82c526f41682f539bc56294ab3c5d6c.yml
+++ b/www.parliament.gh/9d22511fb82c526f41682f539bc56294ab3c5d6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:46:37 GMT
+    - Thu, 17 Nov 2016 17:15:15 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9a75a3089c80d0529767041a43b2417c; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223e36d7e433b49422073c776b7abb022a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379597%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D79ffde4a57fb0380fcf7367f28dc4175;
-      expires=Thu, 17-Nov-2016 12:46:37 GMT; path=/
-    - csrf_xmen=151561457655c8963670f707fa2f094d; expires=Thu, 17-Nov-2016 12:46:37
+    - PHPSESSID=6cc258b124ace8122d0696198e9e64b4; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d91317664b3bb0f6b931335123d9648a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479402915%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D08c7400fd5e2bbc572aa40bf97c47289;
+      expires=Thu, 17-Nov-2016 19:15:15 GMT; path=/
+    - csrf_xmen=b2c7d67edc8497ce70eb2880d05c4be5; expires=Thu, 17-Nov-2016 19:15:15
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78222'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:46:38 GMT
+recorded_at: Thu, 17 Nov 2016 17:15:16 GMT
