200 OK http://www.parliament.gh/parliamentarians/329

--- a/www.parliament.gh/e1a30f7dbe4cf40fdb9235272b8310fc6abcd26a.yml
+++ b/www.parliament.gh/e1a30f7dbe4cf40fdb9235272b8310fc6abcd26a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:48:48 GMT
+    - Thu, 17 Nov 2016 17:18:07 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229c7158857131c9095f85b580f3925143%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379729%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D542857137c175fa86598779225b57861;
-      expires=Thu, 17-Nov-2016 12:48:49 GMT; path=/
-    - csrf_xmen=7813a14fed39682b33418580b7289aeb; expires=Thu, 17-Nov-2016 12:48:49
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%223b740c3af9b702407cc876173ea74e98%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403087%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6d941d57bcf0e0aa30bf8997bddaaf0d;
+      expires=Thu, 17-Nov-2016 19:18:07 GMT; path=/
+    - csrf_xmen=8b4681133263b4b728625ef23f0dcaef; expires=Thu, 17-Nov-2016 19:18:07
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16586'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:48:49 GMT
+recorded_at: Thu, 17 Nov 2016 17:18:07 GMT
