--- a/www.parliament.gh/ddb428aa215bbdedc5272118da40eb0abc0348fc.yml
+++ b/www.parliament.gh/ddb428aa215bbdedc5272118da40eb0abc0348fc.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:49:03 GMT
+    - Thu, 17 Nov 2016 17:18:22 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ac01dae1fa65e3f7a302b79b290807d8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379744%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D95de3f19b90e7b7c36b110184ac3af6e;
-      expires=Thu, 17-Nov-2016 12:49:04 GMT; path=/
-    - csrf_xmen=170160ced001ace26c7a3b4e37574478; expires=Thu, 17-Nov-2016 12:49:04
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d0f82a03c27e22fa1480908af96191c1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403102%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D525b61cbce0952c64a5254c7c1f3f938;
+      expires=Thu, 17-Nov-2016 19:18:22 GMT; path=/
+    - csrf_xmen=a73c040525dd526ca8d425c9d09a58ca; expires=Thu, 17-Nov-2016 19:18:22
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16959'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:49:04 GMT
+recorded_at: Thu, 17 Nov 2016 17:18:23 GMT
