--- a/www.parliament.gh/65988e6bfe883460ef386f00985f9213fb76f617.yml
+++ b/www.parliament.gh/65988e6bfe883460ef386f00985f9213fb76f617.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:49:22 GMT
+    - Thu, 17 Nov 2016 17:18:42 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ad1425d9329a51fdfa45c839bcea2658%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379762%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dca1be7eec2185336fc627c1a67e34418;
-      expires=Thu, 17-Nov-2016 12:49:22 GMT; path=/
-    - csrf_xmen=a2b40ffe758cf51881724197a52e6db1; expires=Thu, 17-Nov-2016 12:49:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2284eea026c656c8523ffb80562d40aa82%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403123%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D627f6f52a962290118e0bb29f0ce297b;
+      expires=Thu, 17-Nov-2016 19:18:43 GMT; path=/
+    - csrf_xmen=f8eec2b6c8d3612b2502788de0cbfe45; expires=Thu, 17-Nov-2016 19:18:43
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16923'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:49:22 GMT
+recorded_at: Thu, 17 Nov 2016 17:18:43 GMT
