--- a/www.parliament.gh/eabc18a7ea34b53d060d6ba1f6b9f7edf054d9d0.yml
+++ b/www.parliament.gh/eabc18a7ea34b53d060d6ba1f6b9f7edf054d9d0.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:49:41 GMT
+    - Thu, 17 Nov 2016 17:19:07 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228bb776751a57df7765e1e824ea077371%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379781%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0faf97666ac9a9cd0c1f12fd9b2facb9;
-      expires=Thu, 17-Nov-2016 12:49:41 GMT; path=/
-    - csrf_xmen=adb618515569bd10fecf3ea16eed31ed; expires=Thu, 17-Nov-2016 12:49:41
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2211e04aefc032c8947b2cd0c23fc4aa40%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403147%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da4a01b725a699f878ad21f2c6160ae22;
+      expires=Thu, 17-Nov-2016 19:19:07 GMT; path=/
+    - csrf_xmen=9587ce3211fe0a111b9181abf8d83405; expires=Thu, 17-Nov-2016 19:19:07
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16852'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:49:41 GMT
+recorded_at: Thu, 17 Nov 2016 17:19:07 GMT
