200 OK http://www.parliament.gh/parliamentarians/349

--- a/www.parliament.gh/bd8b1edd4a096e882e410ab55464fde04435c735.yml
+++ b/www.parliament.gh/bd8b1edd4a096e882e410ab55464fde04435c735.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:49:55 GMT
+    - Thu, 17 Nov 2016 17:19:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221336a700f4073b293411ab68ff48f846%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379795%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D20ff5ac02764246d722727a55ad6f966;
-      expires=Thu, 17-Nov-2016 12:49:55 GMT; path=/
-    - csrf_xmen=03f2a07082c5541b28c05073b5334578; expires=Thu, 17-Nov-2016 12:49:55
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d8546ff0eb5829de380541d8259d5b42%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403180%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5ab713f6f6d18cea0501afe8ddeadd74;
+      expires=Thu, 17-Nov-2016 19:19:40 GMT; path=/
+    - csrf_xmen=05e46e23586083d53ae3431cce1c73e3; expires=Thu, 17-Nov-2016 19:19:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16503'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:49:55 GMT
+recorded_at: Thu, 17 Nov 2016 17:19:40 GMT
