200 OK http://www.parliament.gh/parliamentarians/143

--- a/www.parliament.gh/d9674d613971f5764a3ee3acfec52cf996cbf5c0.yml
+++ b/www.parliament.gh/d9674d613971f5764a3ee3acfec52cf996cbf5c0.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:50:10 GMT
+    - Thu, 17 Nov 2016 17:20:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22af05e2d04ea226b81842762dc1973923%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379810%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D8ffbf49d377f21b7d732b16417c3afc1;
-      expires=Thu, 17-Nov-2016 12:50:10 GMT; path=/
-    - csrf_xmen=22bec0290ecdcc1f125d990577178a16; expires=Thu, 17-Nov-2016 12:50:10
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c9f0161aadcc6adb171516a2d6ca8082%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403218%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dbd864b0b09ea3a22bc1658f9e9aee6d5;
+      expires=Thu, 17-Nov-2016 19:20:18 GMT; path=/
+    - csrf_xmen=98a25e47cc0c3e559756cae080f0994f; expires=Thu, 17-Nov-2016 19:20:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16501'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:50:10 GMT
+recorded_at: Thu, 17 Nov 2016 17:20:18 GMT
