200 OK http://www.parliament.gh/parliamentarians/178

--- a/www.parliament.gh/b5dd0a3d36159ec2c958c99178225a6db44167d2.yml
+++ b/www.parliament.gh/b5dd0a3d36159ec2c958c99178225a6db44167d2.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:50:34 GMT
+    - Thu, 17 Nov 2016 17:20:38 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228db66e3e716a8fd973abfe7b2bc1fa12%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379834%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcea85e2e054e4af986c21099737669cb;
-      expires=Thu, 17-Nov-2016 12:50:34 GMT; path=/
-    - csrf_xmen=9bdab68304d6797a4fe25871fe256f41; expires=Thu, 17-Nov-2016 12:50:34
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b7ad1899f76208067c4134829118e93f%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403238%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D6cc0401dc4e241d75bd8ead778967c47;
+      expires=Thu, 17-Nov-2016 19:20:38 GMT; path=/
+    - csrf_xmen=013c1bacf78d08f52315c2250f7c7d7e; expires=Thu, 17-Nov-2016 19:20:38
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16653'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:50:34 GMT
+recorded_at: Thu, 17 Nov 2016 17:20:38 GMT
