200 OK http://www.parliament.gh/parliamentarians/31

--- a/www.parliament.gh/9098df4d136bf068d85d1cabdb155e670a84195d.yml
+++ b/www.parliament.gh/9098df4d136bf068d85d1cabdb155e670a84195d.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:50:59 GMT
+    - Thu, 17 Nov 2016 17:20:53 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2216b89dbfe3d1a690b834cea433cdfa8c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379859%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D44b229c7c358e0eff7c5ae44368cd520;
-      expires=Thu, 17-Nov-2016 12:50:59 GMT; path=/
-    - csrf_xmen=d6eda54fc890200ef70aaadfbf02885c; expires=Thu, 17-Nov-2016 12:50:59
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22660bef389a3889e4b37398d02c05834d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403253%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5b598bb5b98d92b299a6d3741f7b2097;
+      expires=Thu, 17-Nov-2016 19:20:53 GMT; path=/
+    - csrf_xmen=52be32dfb6d07286820738f7516f73ac; expires=Thu, 17-Nov-2016 19:20:53
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16859'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:50:59 GMT
+recorded_at: Thu, 17 Nov 2016 17:20:53 GMT
