200 OK http://www.parliament.gh/parliamentarians/63

--- a/www.parliament.gh/3bb9613859c32ac5b6c3a5039aae88b21a857c3a.yml
+++ b/www.parliament.gh/3bb9613859c32ac5b6c3a5039aae88b21a857c3a.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:51:14 GMT
+    - Thu, 17 Nov 2016 17:21:10 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%228208d84c1800984ee5317cc10e43c316%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379874%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D9c3de14f7fc9aac9281bf5a1a08bcaa3;
-      expires=Thu, 17-Nov-2016 12:51:14 GMT; path=/
-    - csrf_xmen=ee40876cc9d180c399ebfd73daabf44e; expires=Thu, 17-Nov-2016 12:51:14
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e53c89de0e015726b9eb58901fbd5717%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403270%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D34dbeae268d7ba52df3dbd71b6f965fd;
+      expires=Thu, 17-Nov-2016 19:21:10 GMT; path=/
+    - csrf_xmen=62d9a9a00076dc92f444641b9f00026d; expires=Thu, 17-Nov-2016 19:21:10
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16700'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:51:14 GMT
+recorded_at: Thu, 17 Nov 2016 17:21:10 GMT
