--- a/www.parliament.gh/c17a82e1b402ff63f1927fd8eea33deebfadd065.yml
+++ b/www.parliament.gh/c17a82e1b402ff63f1927fd8eea33deebfadd065.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:51:30 GMT
+    - Thu, 17 Nov 2016 17:21:27 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2231ee06fb832e71d8d8dee7729fca2a50%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379890%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D629e7654e5bb0aa716d2a7a06682b289;
-      expires=Thu, 17-Nov-2016 12:51:30 GMT; path=/
-    - csrf_xmen=53ad4026c72785052d0f727d4e2b42e2; expires=Thu, 17-Nov-2016 12:51:30
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22da4f9d18f8c05010df6076c8797b39a8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403287%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D863a7bf906a31b17b584e269f4ea7602;
+      expires=Thu, 17-Nov-2016 19:21:27 GMT; path=/
+    - csrf_xmen=006934957cf979c335b01437a1ed4718; expires=Thu, 17-Nov-2016 19:21:27
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16467'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:51:30 GMT
+recorded_at: Thu, 17 Nov 2016 17:21:27 GMT
