200 OK http://www.parliament.gh/parliamentarians/403

--- a/www.parliament.gh/a8650c2bdd10c10299f73373c0f7803f853c1881.yml
+++ b/www.parliament.gh/a8650c2bdd10c10299f73373c0f7803f853c1881.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:52:01 GMT
+    - Thu, 17 Nov 2016 17:21:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226805df472ec020ee0d4a2aca29c6dbd5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379921%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D83325fe3f2d270e9cc331afd13fbabe1;
-      expires=Thu, 17-Nov-2016 12:52:01 GMT; path=/
-    - csrf_xmen=b96883552b2c219ec5cd48f906d9cbd5; expires=Thu, 17-Nov-2016 12:52:01
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221eef2609cf0b1359b729907770910d4e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403304%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dad490150b8b41043020e1e97073e8ba8;
+      expires=Thu, 17-Nov-2016 19:21:44 GMT; path=/
+    - csrf_xmen=4d66d15f74c87d00ac0a2eaa3b6a75bc; expires=Thu, 17-Nov-2016 19:21:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16272'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:52:01 GMT
+recorded_at: Thu, 17 Nov 2016 17:21:44 GMT
