--- a/www.parliament.gh/927822537fa02cfe5b4f7feda48d76cb49d4f8cf.yml
+++ b/www.parliament.gh/927822537fa02cfe5b4f7feda48d76cb49d4f8cf.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:52:17 GMT
+    - Thu, 17 Nov 2016 17:22:16 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ed1c89bf2a313680282ab2657394fdd1%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379937%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df2e0e1a6e6d67ffc0543f36e6e77f24e;
-      expires=Thu, 17-Nov-2016 12:52:17 GMT; path=/
-    - csrf_xmen=cc26b70c50fe653cf2bf4d6e8e24d090; expires=Thu, 17-Nov-2016 12:52:17
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ba5cc12122fb8e9ad52d473fa1f6e158%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403336%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1571b553672f13d260fb9dffee635196;
+      expires=Thu, 17-Nov-2016 19:22:16 GMT; path=/
+    - csrf_xmen=61db06b1a4cec478b13aee8b3f7c5d79; expires=Thu, 17-Nov-2016 19:22:16
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16592'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:52:17 GMT
+recorded_at: Thu, 17 Nov 2016 17:22:16 GMT
