--- a/www.parliament.gh/d9f5b7371145c5fd0940ab6b716b275a8c647a05.yml
+++ b/www.parliament.gh/d9f5b7371145c5fd0940ab6b716b275a8c647a05.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:52:31 GMT
+    - Thu, 17 Nov 2016 17:22:49 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c6a4fff53b2b3605cbf0352cd0d76ae2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379951%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5820b7da41fd0f8fbe433a634a62446e;
-      expires=Thu, 17-Nov-2016 12:52:31 GMT; path=/
-    - csrf_xmen=16c78ffd8cdb0216d1ec43d03cb1acd2; expires=Thu, 17-Nov-2016 12:52:31
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f008b936c1c032a1e74481fb7995fe9d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403369%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db64b2443117ad45f7a61dcc6ad03783f;
+      expires=Thu, 17-Nov-2016 19:22:49 GMT; path=/
+    - csrf_xmen=6f17faf7d322dd6977c666f8d902b631; expires=Thu, 17-Nov-2016 19:22:49
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16440'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:52:32 GMT
+recorded_at: Thu, 17 Nov 2016 17:22:49 GMT
