200 OK http://www.parliament.gh/parliamentarians/23

--- a/www.parliament.gh/fa91aefa9346f487d373b92532b81460ad29d558.yml
+++ b/www.parliament.gh/fa91aefa9346f487d373b92532b81460ad29d558.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:52:48 GMT
+    - Thu, 17 Nov 2016 17:23:05 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2258643126177cc905929aab949ed0e037%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479379968%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Da70f9805f452db2298ba09cd99dd18eb;
-      expires=Thu, 17-Nov-2016 12:52:48 GMT; path=/
-    - csrf_xmen=de160d65fd880e57731d79ddf07f1717; expires=Thu, 17-Nov-2016 12:52:48
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22b7d0b743f4611efc9d3911c66bbf84ea%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403385%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D385ab824130f118aa5518e897899a151;
+      expires=Thu, 17-Nov-2016 19:23:05 GMT; path=/
+    - csrf_xmen=83431cfe4cd2babd352e34af933e55e0; expires=Thu, 17-Nov-2016 19:23:05
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16471'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:52:48 GMT
+recorded_at: Thu, 17 Nov 2016 17:23:05 GMT
