--- a/www.parliament.gh/31e4b4b950c0b19de27c352a3571d7154ec22b45.yml
+++ b/www.parliament.gh/31e4b4b950c0b19de27c352a3571d7154ec22b45.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:55:38 GMT
+    - Thu, 17 Nov 2016 17:23:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2287d12e410e0673507b47401bb4b3eff5%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380138%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D74772343e17317d0e69751873a49da91;
-      expires=Thu, 17-Nov-2016 12:55:38 GMT; path=/
-    - csrf_xmen=8f41628535e624823eeadcadf484e0b6; expires=Thu, 17-Nov-2016 12:55:38
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220ddfdab294635a075bcfd712022f077d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403420%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcebf21985b114dba9d4aa22b4b7b7d73;
+      expires=Thu, 17-Nov-2016 19:23:40 GMT; path=/
+    - csrf_xmen=e4c08f256c730534f2a76281a5f2eb07; expires=Thu, 17-Nov-2016 19:23:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16522'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:55:38 GMT
+recorded_at: Thu, 17 Nov 2016 17:23:40 GMT
