200 OK http://www.parliament.gh/parliamentarians/71

--- a/www.parliament.gh/f5c02e6605e248b86276804ecf4b5a28a613ae79.yml
+++ b/www.parliament.gh/f5c02e6605e248b86276804ecf4b5a28a613ae79.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:55:57 GMT
+    - Thu, 17 Nov 2016 17:24:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2298851884fa291feca54a7266237ba787%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380157%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D606a9f61c2c113a74e24ead3adbf5cc0;
-      expires=Thu, 17-Nov-2016 12:55:57 GMT; path=/
-    - csrf_xmen=dfcc193de4c17c055ad518b94dd417cc; expires=Thu, 17-Nov-2016 12:55:57
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f0faa111e89ba4fdc3fc847553bb01f8%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403458%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D5aaa7be12ed73dbd640db549d4340e40;
+      expires=Thu, 17-Nov-2016 19:24:18 GMT; path=/
+    - csrf_xmen=0bb0144b2cd052234cdcfc8fc51c8a22; expires=Thu, 17-Nov-2016 19:24:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16663'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:55:58 GMT
+recorded_at: Thu, 17 Nov 2016 17:24:18 GMT
