--- a/www.parliament.gh/e1c9036762f35ca549e98d9d4727fcb889b3c7d5.yml
+++ b/www.parliament.gh/e1c9036762f35ca549e98d9d4727fcb889b3c7d5.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:56:25 GMT
+    - Thu, 17 Nov 2016 17:24:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d7539efbfea8d2ffc46a96dede82c81e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380185%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddc0e54289183e516cf9ffefe24ee6d32;
-      expires=Thu, 17-Nov-2016 12:56:25 GMT; path=/
-    - csrf_xmen=20a1423a7d2a0187482fa2171e7df9ce; expires=Thu, 17-Nov-2016 12:56:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f16e5407cde4bf1a0c112d216de274ea%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403480%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D194e6172c45f6ad0c62ab8544519328b;
+      expires=Thu, 17-Nov-2016 19:24:40 GMT; path=/
+    - csrf_xmen=ca3ad4f8d38080295bb6cae6814b1392; expires=Thu, 17-Nov-2016 19:24:40
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16389'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:56:25 GMT
+recorded_at: Thu, 17 Nov 2016 17:24:41 GMT
