200 OK http://www.parliament.gh/parliamentarians/390

--- a/www.parliament.gh/fb10bfce28de47dd59bdc1d71446c0dccf51bfc8.yml
+++ b/www.parliament.gh/fb10bfce28de47dd59bdc1d71446c0dccf51bfc8.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:56:39 GMT
+    - Thu, 17 Nov 2016 17:25:05 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227974d9334a68008558840fc564dbc16c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380199%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dcd97cdd8e5a723cc0a99910ec299a38a;
-      expires=Thu, 17-Nov-2016 12:56:39 GMT; path=/
-    - csrf_xmen=6cf3ff920495ad46d596051f1a18fd6f; expires=Thu, 17-Nov-2016 12:56:39
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c1f3111b9709e04275812d3ec9497915%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403505%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7e60df57d1cd2a6d494d235d9801009e;
+      expires=Thu, 17-Nov-2016 19:25:05 GMT; path=/
+    - csrf_xmen=eb2e498f177e7cd2a0853a0aabed86f9; expires=Thu, 17-Nov-2016 19:25:05
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16599'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:56:40 GMT
+recorded_at: Thu, 17 Nov 2016 17:25:05 GMT
