200 OK http://www.parliament.gh/parliamentarians/377

--- a/www.parliament.gh/faec76ff833d924dc1bf5c3ec9d72ad650a5c4eb.yml
+++ b/www.parliament.gh/faec76ff833d924dc1bf5c3ec9d72ad650a5c4eb.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:57:01 GMT
+    - Thu, 17 Nov 2016 17:25:39 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%229f4bb864896e7353feb52f384aec68e6%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380221%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Daf7301eb36a0cb6e5dde7bb5952d14f3;
-      expires=Thu, 17-Nov-2016 12:57:01 GMT; path=/
-    - csrf_xmen=2ce572b843fd2ee5d8260635384801c1; expires=Thu, 17-Nov-2016 12:57:01
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d23ff5646f62bf4b980e5fd50c6173ea%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403539%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D832460f8aad30f5b6ad33ff7f9dff9c9;
+      expires=Thu, 17-Nov-2016 19:25:39 GMT; path=/
+    - csrf_xmen=bc7651417e44839ef642380679b03584; expires=Thu, 17-Nov-2016 19:25:39
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16556'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:57:01 GMT
+recorded_at: Thu, 17 Nov 2016 17:25:39 GMT
