200 OK http://www.parliament.gh/parliamentarians/255

--- a/www.parliament.gh/90e76fcc46607914482b86a434a5041aba0876ed.yml
+++ b/www.parliament.gh/90e76fcc46607914482b86a434a5041aba0876ed.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:57:18 GMT
+    - Thu, 17 Nov 2016 17:26:15 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22efb41a025414db785984ef821f7831f9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380238%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfcb2f98e81f5e6f8ea605890c273f2da;
-      expires=Thu, 17-Nov-2016 12:57:18 GMT; path=/
-    - csrf_xmen=073eda5d0101996cdbd0db6c5c1215b0; expires=Thu, 17-Nov-2016 12:57:18
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22154368c41b5114778615239be7bde55b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403575%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D980e84ad7a63815f1f75e793226111bd;
+      expires=Thu, 17-Nov-2016 19:26:15 GMT; path=/
+    - csrf_xmen=d88592c313fa9e1ce4d676f008e7fb19; expires=Thu, 17-Nov-2016 19:26:15
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16402'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:57:18 GMT
+recorded_at: Thu, 17 Nov 2016 17:26:15 GMT
