200 OK http://www.parliament.gh/parliamentarians/page/140

--- a/www.parliament.gh/a8f4029c782f95d15fb874610587826d4e7222b8.yml
+++ b/www.parliament.gh/a8f4029c782f95d15fb874610587826d4e7222b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:55:23 GMT
+    - Thu, 17 Nov 2016 17:26:36 GMT
     Server:
     - Apache
     X-Powered-By:
@@ -30,18 +30,18 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4de415d589a3c3263cb48558d517be3c; path=/
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%227d5346735b80596035e93a90b59c8e0a%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380123%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Db0a7da4eb7141b215510eee7beacccfd;
-      expires=Thu, 17-Nov-2016 12:55:23 GMT; path=/
-    - csrf_xmen=1ff7be71fd4f5a08d97079e603d4c20d; expires=Thu, 17-Nov-2016 12:55:23
+    - PHPSESSID=4b48c430857ac0cac9859d587b74aa1b; path=/
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22e1f3790449f2240e19b0e835b0c9e02b%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403596%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dd80113942a7901a57cb699cee9799b3c;
+      expires=Thu, 17-Nov-2016 19:26:36 GMT; path=/
+    - csrf_xmen=c21e13f6074f795bffc8cf1034ccb431; expires=Thu, 17-Nov-2016 19:26:36
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '78295'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:55:23 GMT
+recorded_at: Thu, 17 Nov 2016 17:26:37 GMT
