200 OK http://www.parliament.gh/parliamentarians/24

--- a/www.parliament.gh/0c88018e09b2874e41e623c1111c83ee1fb76a85.yml
+++ b/www.parliament.gh/0c88018e09b2874e41e623c1111c83ee1fb76a85.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:57:46 GMT
+    - Thu, 17 Nov 2016 17:29:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22264bb563861a800e43dc288fa3e9694e%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380266%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D34d696a12932a475497db8c39954112f;
-      expires=Thu, 17-Nov-2016 12:57:46 GMT; path=/
-    - csrf_xmen=b018b077293690afb8c463c2c9819521; expires=Thu, 17-Nov-2016 12:57:46
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22005fd40df17188cd190114d008d3c7d2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403784%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc5024439ad8b2bddc9788a62ce409da6;
+      expires=Thu, 17-Nov-2016 19:29:44 GMT; path=/
+    - csrf_xmen=592c76e535d09cbef431acee73af608a; expires=Thu, 17-Nov-2016 19:29:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16925'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:57:46 GMT
+recorded_at: Thu, 17 Nov 2016 17:29:44 GMT
