200 OK http://www.parliament.gh/parliamentarians/291

--- a/www.parliament.gh/553ceb6ef7b9bc714083b55471a057fbbc08ec13.yml
+++ b/www.parliament.gh/553ceb6ef7b9bc714083b55471a057fbbc08ec13.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:58:00 GMT
+    - Thu, 17 Nov 2016 17:30:10 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%220e7aac45aad31020731f7ed4602106a0%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380280%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dabe41e4e9a0d8d1181b077dd88be69b6;
-      expires=Thu, 17-Nov-2016 12:58:00 GMT; path=/
-    - csrf_xmen=1cbba472a15ab7f1223336c4acacfbd5; expires=Thu, 17-Nov-2016 12:58:00
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2252fb28693a612c99447fedcb1f42a4fc%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403810%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De9424b43836ad7ebe044b5325848622f;
+      expires=Thu, 17-Nov-2016 19:30:10 GMT; path=/
+    - csrf_xmen=f73a6c83db3501270ce972907c293d05; expires=Thu, 17-Nov-2016 19:30:10
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16644'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:58:01 GMT
+recorded_at: Thu, 17 Nov 2016 17:30:10 GMT
