--- a/www.parliament.gh/cc6fab0c74ad79ed60b20d79754d25669b5ecd85.yml
+++ b/www.parliament.gh/cc6fab0c74ad79ed60b20d79754d25669b5ecd85.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:58:22 GMT
+    - Thu, 17 Nov 2016 17:30:45 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ed026e83e23297a1be9e3d6a04c7503c%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380302%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D2e6cba595c335bec901bac3aa2b6c8ab;
-      expires=Thu, 17-Nov-2016 12:58:22 GMT; path=/
-    - csrf_xmen=05fcba08c5e363b009fcd984f239b02c; expires=Thu, 17-Nov-2016 12:58:22
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d2d4cc6f91a868d59aae956b8ebc1935%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403845%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D116e0a9f7d2a2d6cf409826650a45728;
+      expires=Thu, 17-Nov-2016 19:30:45 GMT; path=/
+    - csrf_xmen=e3279316004268fac2f12614f9784f4f; expires=Thu, 17-Nov-2016 19:30:45
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16815'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:58:23 GMT
+recorded_at: Thu, 17 Nov 2016 17:30:45 GMT
