200 OK http://www.parliament.gh/parliamentarians/153

--- a/www.parliament.gh/c3e04acdfbe59bd364ba44668ae3e65205c07d85.yml
+++ b/www.parliament.gh/c3e04acdfbe59bd364ba44668ae3e65205c07d85.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:58:42 GMT
+    - Thu, 17 Nov 2016 17:31:20 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2291b1128551cc8b81062e3be61e74f847%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380322%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D0f1cc5c16de631cf7fad1a3b9e8983d5;
-      expires=Thu, 17-Nov-2016 12:58:42 GMT; path=/
-    - csrf_xmen=5de80512882d6c58ca082661080c0be4; expires=Thu, 17-Nov-2016 12:58:42
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224df2975f5c52924f0bd4b9aa55513f63%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403880%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D87a6524356cd1f40c1c58ea09be3049f;
+      expires=Thu, 17-Nov-2016 19:31:20 GMT; path=/
+    - csrf_xmen=a7e6b8dbe5087b8696647de334b223eb; expires=Thu, 17-Nov-2016 19:31:20
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16683'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:58:43 GMT
+recorded_at: Thu, 17 Nov 2016 17:31:21 GMT
