--- a/www.parliament.gh/44e409aa9a6b769e46ff549ed03a6b1f28a19435.yml
+++ b/www.parliament.gh/44e409aa9a6b769e46ff549ed03a6b1f28a19435.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:59:01 GMT
+    - Thu, 17 Nov 2016 17:31:48 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22c8066041feba19ca07d5b37e053bb18d%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380342%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df59d5e83a826a8e3e1afdb185aa162ed;
-      expires=Thu, 17-Nov-2016 12:59:02 GMT; path=/
-    - csrf_xmen=4b3acfe5eddf03159bc68f1ca982d2c6; expires=Thu, 17-Nov-2016 12:59:02
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225c48df4f0af91fcf6a3dd4c30bf457b2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403909%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D750308cfbfbc04d994c6ca62e5cf795a;
+      expires=Thu, 17-Nov-2016 19:31:49 GMT; path=/
+    - csrf_xmen=5e731644b4d54c44914fe501661ad38e; expires=Thu, 17-Nov-2016 19:31:48
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16904'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:59:02 GMT
+recorded_at: Thu, 17 Nov 2016 17:31:49 GMT
