--- a/www.parliament.gh/e99b6f0e0f1fc4787b5b4ae9b6999d0b42b46079.yml
+++ b/www.parliament.gh/e99b6f0e0f1fc4787b5b4ae9b6999d0b42b46079.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:59:25 GMT
+    - Thu, 17 Nov 2016 17:32:18 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2263506880055d192876295beb48e55cb9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380365%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D4150f0346bae1a48bf95fe576cd204db;
-      expires=Thu, 17-Nov-2016 12:59:25 GMT; path=/
-    - csrf_xmen=4869d6e7f9e1ffdd906658d15e964729; expires=Thu, 17-Nov-2016 12:59:25
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2211245f88709a0715fe53d96683db0f52%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403938%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3e1c8b8332678ac69fa9d815729420f1;
+      expires=Thu, 17-Nov-2016 19:32:18 GMT; path=/
+    - csrf_xmen=3c7113f1e972611a9b9f9144485f7c17; expires=Thu, 17-Nov-2016 19:32:18
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16527'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:59:25 GMT
+recorded_at: Thu, 17 Nov 2016 17:32:19 GMT
