--- a/www.parliament.gh/0154ee9e36081628097b0b7ea2b8b6dd61453f74.yml
+++ b/www.parliament.gh/0154ee9e36081628097b0b7ea2b8b6dd61453f74.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 10:59:39 GMT
+    - Thu, 17 Nov 2016 17:32:40 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22ebd0abac452b83c5b37fc71815d255d2%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380379%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Df3ed58af60c579a0092dbb26478559f7;
-      expires=Thu, 17-Nov-2016 12:59:39 GMT; path=/
-    - csrf_xmen=e95229346d7b9273b7016626599e3163; expires=Thu, 17-Nov-2016 12:59:39
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22f55fa85e687195fc567b37a0eb4521a9%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479403961%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dfe5e226e32e4b84b775bdafe2b169a3d;
+      expires=Thu, 17-Nov-2016 19:32:41 GMT; path=/
+    - csrf_xmen=2e58362587a67875ae1619274de0cb76; expires=Thu, 17-Nov-2016 19:32:41
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16565'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 10:59:39 GMT
+recorded_at: Thu, 17 Nov 2016 17:32:41 GMT
