--- a/www.parliament.gh/356633a28e1d610afe339903b06f0fcd670a8d47.yml
+++ b/www.parliament.gh/356633a28e1d610afe339903b06f0fcd670a8d47.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:00:18 GMT
+    - Thu, 17 Nov 2016 17:33:42 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%224a6419b7ac84d5e2180dd33425ae89eb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380418%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7De701e3de67d55b81990e1323192ce050;
-      expires=Thu, 17-Nov-2016 13:00:18 GMT; path=/
-    - csrf_xmen=2a621f20d3d6d4eae7406b11ba062ae2; expires=Thu, 17-Nov-2016 13:00:18
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225d22904b1c06c6bfc066e978fd591857%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404022%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1e87584bb78d3f9115cbc44dc27cf03f;
+      expires=Thu, 17-Nov-2016 19:33:42 GMT; path=/
+    - csrf_xmen=ed39cf93d46eaa79dbed35371bc7b34c; expires=Thu, 17-Nov-2016 19:33:42
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16691'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:00:18 GMT
+recorded_at: Thu, 17 Nov 2016 17:33:42 GMT
