200 OK http://www.parliament.gh/parliamentarians/416

--- a/www.parliament.gh/dd72ce64f3762b397312e24cf90b530bf061ca70.yml
+++ b/www.parliament.gh/dd72ce64f3762b397312e24cf90b530bf061ca70.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:00:34 GMT
+    - Thu, 17 Nov 2016 17:34:15 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2211161d4f8bd5627237a5a717a9ada6e7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380434%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Dc563c2ac3217b9004234fb478568d62e;
-      expires=Thu, 17-Nov-2016 13:00:34 GMT; path=/
-    - csrf_xmen=4f145a7fdf8367b3a4d5a548dac71b62; expires=Thu, 17-Nov-2016 13:00:34
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%225722e119a7992870dc91f847b0ca2aea%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404055%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D500ceb72005c6a9a6d8628535227d356;
+      expires=Thu, 17-Nov-2016 19:34:15 GMT; path=/
+    - csrf_xmen=cc414dd5a284b123155538ca74ad208c; expires=Thu, 17-Nov-2016 19:34:15
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16304'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:00:34 GMT
+recorded_at: Thu, 17 Nov 2016 17:34:15 GMT
