200 OK http://www.parliament.gh/parliamentarians/185

--- a/www.parliament.gh/2a0016eb4bef045b7d96cc79501a4117bb06bb45.yml
+++ b/www.parliament.gh/2a0016eb4bef045b7d96cc79501a4117bb06bb45.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:01:11 GMT
+    - Thu, 17 Nov 2016 17:34:51 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2256d957dcb6c40d8a32555963fd0fdaa7%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380471%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7Ddf0d04d54dc1327d1f04c739844f5a53;
-      expires=Thu, 17-Nov-2016 13:01:11 GMT; path=/
-    - csrf_xmen=9865eecebd931332be85a535970e38d6; expires=Thu, 17-Nov-2016 13:01:11
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%226681480be5e46d372664e4556686d460%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404091%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D7ed93e69cd77c85fb5d916308d29b11e;
+      expires=Thu, 17-Nov-2016 19:34:51 GMT; path=/
+    - csrf_xmen=f39179831006e7a21fe34bd380264458; expires=Thu, 17-Nov-2016 19:34:51
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16450'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:01:11 GMT
+recorded_at: Thu, 17 Nov 2016 17:34:51 GMT
