200 OK http://www.parliament.gh/parliamentarians/70

--- a/www.parliament.gh/f9972efb8831aed6f605c8bc53f2aae59ba4812e.yml
+++ b/www.parliament.gh/f9972efb8831aed6f605c8bc53f2aae59ba4812e.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:01:28 GMT
+    - Thu, 17 Nov 2016 17:35:28 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22354d959cc37f1e61b472f40da33f31bb%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380488%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1ae12c15a4dcdff2a2fa4d426123d63a;
-      expires=Thu, 17-Nov-2016 13:01:28 GMT; path=/
-    - csrf_xmen=e20ea5042fc59bef1f071f370db04f8f; expires=Thu, 17-Nov-2016 13:01:28
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%22d71138b4a95838bea4a0bbcc5ba35dba%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404128%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1b156f2ea0799f3a7d8815bef5c3c81d;
+      expires=Thu, 17-Nov-2016 19:35:28 GMT; path=/
+    - csrf_xmen=03e2320779f77cac0d83e5e060d202a9; expires=Thu, 17-Nov-2016 19:35:28
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16650'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:01:28 GMT
+recorded_at: Thu, 17 Nov 2016 17:35:28 GMT
