--- a/www.parliament.gh/a959d9cf29cad20cfd05bb3a7bc09f39fa942478.yml
+++ b/www.parliament.gh/a959d9cf29cad20cfd05bb3a7bc09f39fa942478.yml
@@ -18,23 +18,23 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 17 Nov 2016 11:01:53 GMT
+    - Thu, 17 Nov 2016 17:35:44 GMT
     Server:
     - Apache
     X-Powered-By:
     - PHP/5.3.3
     Set-Cookie:
-    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%221678a15498e847318825cdca1a93b4f4%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A10%3A%225.148.47.8%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479380513%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D3eb0d86e4f46dfb038bc4eb76fef2b25;
-      expires=Thu, 17-Nov-2016 13:01:53 GMT; path=/
-    - csrf_xmen=43e563aa07ec1f59c9d38a8dddfdbe8c; expires=Thu, 17-Nov-2016 13:01:53
+    - ci_session=a%3A5%3A%7Bs%3A10%3A%22session_id%22%3Bs%3A32%3A%2257235499ed82d604e809b4ba4b766203%22%3Bs%3A10%3A%22ip_address%22%3Bs%3A11%3A%2250.116.3.88%22%3Bs%3A10%3A%22user_agent%22%3Bs%3A4%3A%22Ruby%22%3Bs%3A13%3A%22last_activity%22%3Bi%3A1479404145%3Bs%3A9%3A%22user_data%22%3Bs%3A0%3A%22%22%3B%7D1d1ba13e2a1511bfe590a2126ef2f425;
+      expires=Thu, 17-Nov-2016 19:35:45 GMT; path=/
+    - csrf_xmen=99b940111d72e549302fc84678f05ff1; expires=Thu, 17-Nov-2016 19:35:44
       GMT; path=/
     X-Server:
     - '3908'
-    Transfer-Encoding:
-    - chunked
     Content-Type:
     - text/html; charset=iso-8859-1
+    Content-Length:
+    - '16898'
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 17 Nov 2016 11:01:53 GMT
+recorded_at: Thu, 17 Nov 2016 17:35:45 GMT
